@@ -48,6 +48,14 @@ lib/SPVM/Sys/IO/Utimbuf.c
 lib/SPVM/Sys/IO/Utimbuf.config
 lib/SPVM/Sys/IO/Utimbuf.pm
 lib/SPVM/Sys/IO/Utimbuf.spvm
+lib/SPVM/Sys/Ioctl.c
+lib/SPVM/Sys/Ioctl.config
+lib/SPVM/Sys/Ioctl.pm
+lib/SPVM/Sys/Ioctl.spvm
+lib/SPVM/Sys/Ioctl/Constant.c
+lib/SPVM/Sys/Ioctl/Constant.config
+lib/SPVM/Sys/Ioctl/Constant.pm
+lib/SPVM/Sys/Ioctl/Constant.spvm
 lib/SPVM/Sys/Poll.c
 lib/SPVM/Sys/Poll.config
 lib/SPVM/Sys/Poll.pm
@@ -193,6 +201,7 @@ t/ftest/file_empty.txt
 t/ftest/file_new_lines.txt
 t/lib/SPVM/TestCase/Sys/FileTest.spvm
 t/lib/SPVM/TestCase/Sys/IO.spvm
+t/lib/SPVM/TestCase/Sys/Ioctl.spvm
 t/lib/SPVM/TestCase/Sys/Poll.spvm
 t/lib/SPVM/TestCase/Sys/Process.spvm
 t/lib/SPVM/TestCase/Sys/Socket.spvm
@@ -203,6 +212,7 @@ t/print_hello.pl
 t/Sys.t
 t/Sys_FileTest.t
 t/Sys_IO.t
+t/Sys_Ioctl.t
 t/Sys_Poll.t
 t/Sys_Process.t
 t/Sys_Socket.t
