@@ -1,0 +1,42 @@
+class TestCase::Sys::Ioctl {
+  use Sys;
+  use Sys::Socket;
+  use Sys::Socket::Constant as SOCKET;
+  use Sys::Socket::Sockaddr;
+  use Sys::Socket::Sockaddr::In;
+  use Sys::Process;
+  use Sys::IO::Constant as IO;
+  use Sys::Ioctl;
+  use Sys::Ioctl::Constant as IOCTL;
+  
+  use TestUtil::SocketAutoClose;
+  
+  static method ioctl : int ($port : int) {
+    # Socket
+    my $socket = Sys::Socket->socket(SOCKET->AF_INET, SOCKET->SOCK_STREAM, 0);
+    
+    unless ($socket> 0) {
+      return 0;
+    }
+
+    # Close socket at the end of this scope
+    my $socket_auto_close = TestUtil::SocketAutoClose->new($socket);
+    
+    # IPv4 address
+    my $address = Sys::Socket::Sockaddr::In->new;
+    $address->set_sin_family((byte)SOCKET->AF_INET);
+    $address->set_sin_port(Sys::Socket->htons((short)$port));
+    my $sin_addr = $address->copy_sin_addr;
+    $sin_addr->set_s_addr(Sys::Socket->htonl(SOCKET->INADDR_ANY));
+    $address->set_sin_addr($sin_addr);
+    
+    my $value = (Int)1;
+    my $status_ioctl = Sys::Ioctl->ioctl($socket, IOCTL->FIONBIO, $value);
+    
+    unless ($status_ioctl == 0) {
+      return 0;
+    }
+    
+    return 1;
+  }
+}
